# Shapes

./: AngularShape.cpp  AngularShape.h  CMakeLists.txt  Circle.cpp  Circle.h  Drawer.cpp  Drawer.h  IShape.h  Point.cpp  Point.h  README.md  Rectangle.cpp  Rectangle.h  Shapes.cpp  Shapes.vcxproj  Shapes.vcxproj.filters  Triangle.cpp  Triangle.h  how_to_run.md  run_with_cmake.sh  run_with_make.sh
Drawer/: Drawer.cpp  Drawer.h
Math/: MathFunctions.cpp  MathFunctions.h
Shape/AngularShape/: Rectangle.cpp  Square.cpp  Star.h  Triangle.cpp
Shape/Circle/: Circle.cpp
src/: CMakeLists.txt  Makefile  Shapes.cpp
src/Drawer/: CMakeLists.txt  Drawer.cpp  Drawer.h
src/Math/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
src/Point/: CMakeLists.txt  Point.cpp  Point.h
src/Shape/: CMakeLists.txt  IShape.cpp  IShape.h
src/Shape/AngularShape/: AngularShape.cpp  AngularShape.h  CMakeLists.txt  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Star.cpp  Star.h  Triangle.cpp  Triangle.h
src/Shape/Circle/: CMakeLists.txt  Circle.cpp  Circle.h
